--- a/lib/css/_main.scss
+++ b/lib/css/_main.scss
@@ -163,6 +163,42 @@
                     }
                 }
             }
+            .column-item {
+                margin-bottom: 24px;
+                &:nth-child(1),
+                &:nth-child(2) {
+                    .news-list__item {
+                        height: 100%;
+                        .images {
+                            height: 280px;
+                            @media(max-width: 991px) {
+                                height: auto;
+                            }
+                        }
+                        .desc {
+                            .content {
+                                display: none;
+                                @media(max-width: 991px) {
+                                    display: block;
+                                }
+                            }
+                        }
+                    }
+                }
+                &:nth-child(1) {
+                    .news-list__item {
+                        .desc {
+                            .title {
+                                font-weight: 600;
+                                font-size: 15px;
+                                line-height: 24px;
+                                /* or 160% */
+                                letter-spacing: 0.75px;
+                            }
+                        }
+                    }
+                }
+            }
         }
         &__menu {
             display: flex;
@@ -220,7 +256,8 @@
             border-radius: 8px;
             // padding: 0 0 16px;
             isolation: isolate;
-            margin-bottom: 24px;
+            display: flex;
+            flex-direction: column;
             .images {
                 margin-bottom: 0;
                 img {
@@ -234,6 +271,9 @@
                 color: #fff;
                 padding: 10px 16px;
                 position: relative;
+                flex: 1;
+                display: flex;
+                flex-direction: column;
                 .title {
                     font-weight: 600;
                     font-size: 13px;
@@ -253,7 +293,7 @@
                     font-weight: 400;
                     font-size: 13px;
                     line-height: 20px;
-                    margin-bottom: 20px;
+                    margin-bottom: 15px;
                     overflow: hidden;
                     text-overflow: ellipsis;
                     display: -webkit-box;
@@ -266,34 +306,15 @@
                     line-height: 24px;
                     letter-spacing: 0.25px;
                     color: var(--gray2-color);
+                    display: none;
                 }
                 .time {
-                    position: absolute;
-                    width: 65px;
-                    height: 71px;
-                    left: 15px;
-                    bottom: 100%;
-                    background: #005DB3;
-                    border-radius: 8px 8px 0px 0px;
-                    display: flex;
-                    flex-direction: column;
-                    justify-content: flex-end;
-                    align-items: center;
-                    padding: 4px;
-                    gap: 10px;
-                    strong {
-                        font-size: 33px;
-                        line-height: 40px;
-                        font-weight: 600;
-                    }
-                    span {
-                        font-size: 10px;
-                        line-height: 12px;
-                        display: flex;
-                        align-items: flex-end;
-                        text-align: center;
-                        letter-spacing: 1px;
-                    }
+                    font-weight: 400;
+                    font-size: 13px;
+                    line-height: 24px;
+                    letter-spacing: 0.25px;
+                    color: var(--gray2-color);
+                    margin-top: auto;
                 }
             }
         }
@@ -353,6 +374,7 @@
                                 display: -webkit-box;
                                 -webkit-line-clamp: 3;
                                 -webkit-box-orient: vertical;
+                                text-transform: capitalize
                             }
                             .time {
                                 font-weight: 500;
@@ -479,11 +501,14 @@
 }
 
 .video {
-    background-image: url('../../images/BG-img.png');
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    padding: 24px 0;
+    &__inner {
+        background-image: url('../../images/BG-img.png');
+        background-position: center center;
+        background-repeat: no-repeat;
+        background-size: 100%;
+        background-size: cover;
+        padding: 24px 0;
+    }
     &-pagination {
         margin: 30px 0;
     }
