--- a/lib/css/style.scss
+++ b/lib/css/style.scss
@@ -92,3 +92,30 @@ select {
     outline: none;
     transition: box-shadow .3s, border .3s, -webkit-box-shadow .3s;
 }
+
+.section-title {
+    text-align: center;
+    margin-bottom: 30px;
+    margin-top: 45px;
+    .subtitle {
+        font-weight: 600;
+        font-size: 15px;
+        line-height: 24px;
+        letter-spacing: 0.75px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+        margin-bottom: 10px;
+        display: block;
+    }
+    .sectitle {
+        font-weight: 700;
+        font-size: 24px;
+        line-height: 24px;
+        letter-spacing: 0.75px;
+        text-transform: uppercase;
+        color: #FFFFFF;
+    }
+    @media(max-width:991px) {
+        margin-top: 0px;
+    }
+}
