--- a/lib/css/_header.scss
+++ b/lib/css/_header.scss
@@ -11,6 +11,7 @@ body {
             left: 0;
             height: 100%;
             z-index: 2;
+            border-right: 1px solid #8492A6;
             .lost__logo {
                 position: absolute;
                 bottom: 30px;
@@ -423,9 +424,6 @@ body#home {
         background-size: 100% 100%;
         height: 100vh;
         position: relative;
-        &__main-menu {
-            border-right: 1px solid #8492A6;
-        }
         &__inner {
             header {
                 &__inner {
@@ -650,7 +648,6 @@ body#home {
         }
     }
     &2 {
-        // transform: translate(-50%, -50%);
         opacity: 0;
         visibility: hidden;
         &.animated {
@@ -689,7 +686,7 @@ body#home {
             right: 36%;
             opacity: 1;
             visibility: visible;
-            animation: rotate2 .7s ease;
+            animation: rotate2 .5s ease;
             transform: translate(50%, -50%);
             @keyframes rotate2 {
                 0% {
@@ -1198,46 +1195,117 @@ body#home {
         }
     }
     @media(max-width:1380px) {
-        &.hex-style2 {
-            display: none;
-        }
+        // &.hex-style2 {
+        //     display: none;
+        // }
         &1 {
             &.animated {
                 top: 50%;
+                width: 250px;
+                height: 250px;
             }
         }
-        // &2 {
-        //     &.animated {
-        //         top: 35%;
-        //     }
-        // }
+        &2 {
+            &.animated {
+                top: 20%;
+                left: 40%;
+            }
+        }
+        &10 {
+            &.animated {
+                top: 20%;
+                right: 40%;
+            }
+        }
         &3 {
             &.animated {
                 top: 50%;
+                left: 32%;
+            }
+        }
+        &11 {
+            &.animated {
+                top: 50%;
+                right: 32%;
             }
         }
         &4 {
             &.animated {
                 top: 80%;
-            }
-        }
-        // &10 {
-        //     &.animated {
-        //         top: 35%;
-        //     }
-        // }
-        &11 {
-            &.animated {
-                top: 50%;
+                left: 40%;
             }
         }
         &12 {
             &.animated {
                 top: 80%;
+                right: 40%;
+            }
+        }
+        &5 {
+            &.animated {
+                top: 10%;
+                left: 30%;
+            }
+        }
+        &13 {
+            &.animated {
+                top: 10%;
+                right: 30%;
+            }
+        }
+        &6 {
+            &.animated {
+                top: 30%;
+                left: 24%;
+            }
+        }
+        &14 {
+            &.animated {
+                top: 30%;
+                right: 24%;
+            }
+        }
+        &7 {
+            &.animated {
+                top: 50%;
+                left: 18%;
+            }
+        }
+        &15 {
+            &.animated {
+                top: 50%;
+                right: 18%;
+            }
+        }
+        &8 {
+            &.animated {
+                top: 70%;
+                left: 24%;
+            }
+        }
+        &16 {
+            &.animated {
+                top: 70%;
+                right: 24%;
+            }
+        }
+        &9 {
+            &.animated {
+                top: 90%;
+                left: 30%;
+            }
+        }
+        &17 {
+            &.animated {
+                top: 90%;
+                right: 30%;
             }
         }
     }
     @media(max-width:991px) {
+        &.hex-style2 {
+            display: none;
+        }
         &1 {
             &.animated {
                 top: 20%;
@@ -1248,11 +1316,13 @@ body#home {
         &2 {
             &.animated {
                 top: 53%;
+                left: 30%;
             }
         }
         &10 {
             &.animated {
                 top: 53%;
+                right: 30%;
             }
         }
         &3 {
@@ -1260,6 +1330,16 @@ body#home {
         }
         &11 {
             display: none;
+        }
+        &4 {
+            &.animated {
+                left: 30%;
+            }
+        }
+        &12 {
+            &.animated {
+                right: 30%;
+            }
         }
     }
     @media(max-width:767.98px) {
